Test map with execute and add/remove cue

--- a/Game/Config/DefaultGameplayTags.ini
+++ b/Game/Config/DefaultGameplayTags.ini
@@ -9,5 +9,6 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="food.eaten",DevComment="This food has been eaten")
 +GameplayTagList=(Tag="GameplayCue",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Marker",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Add",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Execute",DevComment="")
 
