--- a/Game/Config/DefaultGameplayTags.ini
+++ b/Game/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="food.eaten",DevComment="This food has been eaten")
++GameplayTagList=(Tag="GameplayAbility.Counting",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Trigger",DevComment="")
 +GameplayTagList=(Tag="GameplayCue",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Add",DevComment="")
