Revert rep graph

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -34,7 +34,7 @@ DefaultGraphicsPerformance=Maximum
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
-ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 NetServerMaxTickRate=30
 
 [/Script/Engine.PhysicsSettings]
