add new map benchmarkgymLF

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{4EA46E47-4CEE-B48F-7E4F-AEBC45D8CFBA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
