--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -24,13 +24,13 @@ bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
-ServicesRegion=Default
+ServicesRegion=CN
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=False
 ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
 ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
-SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
+SpatialDebugger=None
 bEnableUnrealLoadBalancer=True
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bRunSpatialWorkerConnectionOnGameThread=False
