map benchmarkgym_lf

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -94,7 +94,7 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/benchmarkgymLF.benchmarkgymLF
+EditorStartupMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -103,8 +103,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/benchmarkgymLF.benchmarkgymLF
-ServerDefaultMap=/Game/Maps/benchmarkgymLF.benchmarkgymLF
+GameDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
+ServerDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
