movement component optimization on networking

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -18,6 +18,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="StarterProjectGameMode",NewClassName="GDKTestGymsGameMode")
 +ActiveClassRedirects=(OldClassName="StarterProjectCharacter",NewClassName="GDKTestGymsCharacter")
 WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
+bUseFixedFrameRate=False
+bSmoothFrameRate=False
+CustomTimeStepClassName=None
 
 [Core.Log]
 LogSpatialOSActorChannel=Log
