make ligth static, strip off animation for ds, turn off overlapping event

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -112,3 +112,6 @@ GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 
+[/Script/Engine.AnimationSettings]
+bStripAnimationDataOnDedicatedServer=True
+
