offloaded sim players

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -97,7 +97,7 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
+EditorStartupMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -106,8 +106,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
-ServerDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
+GameDefaultMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
+ServerDefaultMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
