cull distance based frequency

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -1,4 +1,5 @@
 
+
 [/Script/SpatialGDK.SpatialGDKSettings]
 EntityPoolInitialReservationCount=3000
 EntityPoolRefreshThreshold=1000
@@ -13,7 +14,8 @@ OpsUpdateRate=1000.000000
 bEnableHandover=True
 MaxNetCullDistanceSquared=0.000000
 QueuedIncomingRPCWaitTime=1.000000
-QueuedOutgoingRPCWaitTime=30.000000
+QueuedIncomingRPCRetryTime=1.000000
+QueuedOutgoingRPCRetryTime=1.000000
 PositionUpdateFrequency=1.000000
 PositionDistanceThreshold=100.000000
 bEnableMetrics=True
@@ -22,36 +24,32 @@ MetricsReportRate=2.000000
 bUseFrameTimeAsLoad=False
 bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
-bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
+bPreventClientCloudDeploymentAutoConnect=False
 ServicesRegion=CN
-DefaultWorkerType=(WorkerTypeName="UnrealWorker")
-bEnableOffloading=False
-ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
-ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
 SpatialDebugger=None
-bEnableUnrealLoadBalancer=True
-LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bRunSpatialWorkerConnectionOnGameThread=False
 bUseRPCRingBuffers=True
 DefaultRPCRingBufferSize=32
 RPCRingBufferSizeMap=()
 MaxRPCRingBufferSize=32
 bTcpNoDelay=False
-UdpServerUpstreamUpdateIntervalMS=1
 UdpServerDownstreamUpdateIntervalMS=1
-UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
+bWorkerFlushAfterOutgoingNetworkOp=False
 bAsyncLoadNewClassesOnEntityCheckout=False
 RPCQueueWarningTimeouts=()
 RPCQueueWarningDefaultTimeout=2.000000
 bEnableNetCullDistanceInterest=True
-bEnableNetCullDistanceFrequency=False
+bEnableNetCullDistanceFrequency=True
 FullFrequencyNetCullDistanceRatio=0.330000
-InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
-+InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=15.000000)
++InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=5.000000)
++InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=10.000000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+bUseSpatialView=False
+bEnableMultiWorkerDebuggingWarnings=False
+RPCTypeAllowUnresolvedParamMap=()
 
