--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -49,6 +49,6 @@ MobileWorkerType=UnrealClient
 MobileExtraCommandLineArgs=
 bPackageMobileCommandLineArgs=False
 bStartPIEClientsWithLocalLaunchOnDevice=False
-LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkerConfig=(WorkerPermissions=(bAllPermissions=True,bAllowEntityCreation=True,bAllowEntityDeletion=True,bAllowEntityQuery=True,Components=),bAutoNumEditorInstances=True,NumEditorInstances=1,Flags=(("stat_profile", "60,60")),bManualWorkerConnectionOnly=False))
+LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkerConfig=(WorkerPermissions=(bAllPermissions=True,bAllowEntityCreation=True,bAllowEntityDeletion=True,bAllowEntityQuery=True,Components=),bAutoNumEditorInstances=True,NumEditorInstances=1,Flags=(),bManualWorkerConnectionOnly=False))
 SpatialOSNetFlowType=LocalDeployment
 
