--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -15,6 +15,10 @@
 	],
 	"Plugins": [
 		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
+		},
+		{
 			"Name": "ReplicationGraph",
 			"Enabled": true
 		},
