[UNR-4827] Move GAS tests into GDKTestGyms (#279)
Move GAS tests into their own editor-only module, re-add to map, add build dependencies, add LogGymsSpatialFunctionalTest

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -11,6 +11,11 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "GDKTestGymsFunctionalTests",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
