--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -6,6 +6,7 @@ bSpatialNetworking=True
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="Spatial")
 +DirectoriesToAlwaysCook=(Path="/SpatialGDK/SpatialDebugger/")
++DirectoriesToNeverCook=(Path="/Game/Actors/NeverCook")
 bCookAll=True
 
 [/Script/Engine.GameSession]
