--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -16,7 +16,7 @@ SpatialOSSnapshotToSave=default.snapshot
 SpatialOSSnapshotToLoad=default.snapshot
 CookAndGeneratePlatform=
 CookAndGenerateAdditionalArguments=-cookall -unversioned
-+SpatialOSCommandLineLaunchFlags=--event-tracing-enabled
++SpatialOSCommandLineLaunchFlags=--event-tracing-enabled=true --event-tracing-logs-directory="C:/work/dev/4.24/UnrealGDKTestGyms/Game/Saved/EventTracing/"
 AssemblyName=
 PrimaryDeploymentName=
 PrimaryLaunchConfigPath=(FilePath="")
