--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -1,4 +1,5 @@
 
+
 [/Script/SpatialGDK.SpatialGDKSettings]
 EntityPoolInitialReservationCount=3000
 EntityPoolRefreshThreshold=1000
@@ -10,49 +11,52 @@ ActorReplicationRateLimit=0
 EntityCreationRateLimit=0
 bUseIsActorRelevantForConnection=False
 OpsUpdateRate=1000.000000
-bEnableHandover=True
 MaxNetCullDistanceSquared=0.000000
 QueuedIncomingRPCWaitTime=1.000000
-QueuedOutgoingRPCWaitTime=30.000000
-PositionUpdateFrequency=1.000000
-PositionDistanceThreshold=100.000000
+QueuedIncomingRPCRetryTime=1.000000
+QueuedOutgoingRPCRetryTime=1.000000
+PositionUpdateLowerThresholdSeconds=1.000000
+PositionUpdateLowerThresholdCentimeters=100.000000
+PositionUpdateThresholdMaxSeconds=60.000000
+PositionUpdateThresholdMaxCentimeters=5000.000000
 bEnableMetrics=True
 bEnableMetricsDisplay=False
 MetricsReportRate=2.000000
 bUseFrameTimeAsLoad=False
 bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
-bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
+bPreventClientCloudDeploymentAutoConnect=False
 ServicesRegion=Default
-DefaultWorkerType=(WorkerTypeName="UnrealWorker")
-bEnableOffloading=False
-ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
-ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
+LocalWorkerLogLevel=Warning
+CloudWorkerLogLevel=Warning
 SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
-bEnableUnrealLoadBalancer=True
-LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
-bRunSpatialWorkerConnectionOnGameThread=False
-bUseRPCRingBuffers=True
+bEnableMultiWorker=True
 DefaultRPCRingBufferSize=32
 RPCRingBufferSizeMap=()
 MaxRPCRingBufferSize=32
 bTcpNoDelay=False
-UdpServerUpstreamUpdateIntervalMS=1
 UdpServerDownstreamUpdateIntervalMS=1
-UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
+bWorkerFlushAfterOutgoingNetworkOp=True
 bAsyncLoadNewClassesOnEntityCheckout=False
 RPCQueueWarningTimeouts=()
 RPCQueueWarningDefaultTimeout=2.000000
 bEnableNetCullDistanceInterest=True
 bEnableNetCullDistanceFrequency=False
 FullFrequencyNetCullDistanceRatio=0.330000
-InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
++InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
 +InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=15.000000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+bEnableCrossLayerActorSpawning=True
+RPCTypeAllowUnresolvedParamMap=()
+StartupLogRate=5.000000
+ActorMigrationLogRate=5.000000
 bEventTracingEnabled=True
+SamplingProbability=0.000000
+EventSamplingModeOverrides=(("client_server_client.begin", 1.000000),("client_server_property.begin", 1.000000))
+MaxEventTracingFileSizeBytes=268435456
 
