--- a/.buildkite/premerge.definition.yaml
+++ b/.buildkite/premerge.definition.yaml
@@ -2,6 +2,7 @@ agent_queue_id: trigger-pipelines
 description: TestGyms premerge (calls GDK premerge)
 github:
   default_branch: master
+  pull_request_branch_filter_configuration: ["!docs*"]
 teams:
 - name: Everyone
   permission: BUILD_AND_READ
