Disable audio logs

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -21,6 +21,8 @@ WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
 
 [Core.Log]
 LogSpatialOSActorChannel=Log
+LogAudio=Warn
+LogAudioMixer=Warn
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
