Set the default copyright notice

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 ProjectID=15DF27B64C27005D381502A74985A40F
 ProjectName=Spatial GDK Template
 bSpatialNetworking=True
+CopyrightNotice=Copyright (c) Improbable Worlds Ltd, All Rights Reserved
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="Spatial")
@@ -12,3 +13,4 @@ bCookAll=True
 [/Script/Engine.GameSession]
 MaxPlayers=1000
 MaxSpectators=1000
+
