New ini files / ini file updates

--- a/Game/Config/TestOverridesEmpty.ini
+++ b/Game/Config/TestOverridesEmpty.ini
@@ -1,6 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-PlayNumberOfClients=3
-PlayNetMode=PIE_Client
+PlayNetMode=PIE_Standalone
 
 [/Script/EngineSettings.GeneralProjectSettings]
-bSpatialNetworking=True
+bSpatialNetworking=False
