--- a/Game/Config/TestOverridesSpatialSnapshotTestPart1Map.ini
+++ b/Game/Config/TestOverridesSpatialSnapshotTestPart1Map.ini
@@ -1,2 +1,9 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
 PlayNumberOfClients=1
+PlayNetMode=PIE_Client
+
+[/Script/EngineSettings.GeneralProjectSettings]
+bSpatialNetworking=True
+
+[/Script/UnrealEd.EditorPerformanceSettings]
+bThrottleCPUWhenNotForeground=False
