--- a/Game/Config/TestOverridesWorldCompositionGym.ini
+++ b/Game/Config/TestOverridesWorldCompositionGym.ini
@@ -1,2 +1,2 @@
-[/Script/SpatialGDK.SpatialGDKSettings]
-PositionUpdateThresholdMaxCentimeters=1
+[/Script/UnrealEd.LevelEditorPlaySettings]
+PlayNumberOfClients=1
