Move cues test to single worker map, fix ability ending, fix cues double registration warning

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -14,3 +14,5 @@ bCookAll=True
 MaxPlayers=1000
 MaxSpectators=1000
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++GameplayCueNotifyPaths="/Game"
