--- a/Game/Config/DefaultGameplayTags.ini
+++ b/Game/Config/DefaultGameplayTags.ini
@@ -11,5 +11,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayAbility.Counting",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Trigger",DevComment="")
 +GameplayTagList=(Tag="GameplayCue",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Add",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Execute",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Add",DevComment="Used in a test gym, for cues added/removed by an effect with duration.")
++GameplayTagList=(Tag="GameplayCue.Execute",DevComment="Used in a test gym, for cues executed by an instant effect")
++GameplayTagList=(Tag="GameplayCue.Test.Add",DevComment="Used in PredictedGameplayCuesTest. DO NOT USE FOR ANY OTHER GAMEPLAY CUE, it will likely break the test.")
++GameplayTagList=(Tag="GameplayCue.Test.Execute",DevComment="Used in PredictedGameplayCuesTest. DO NOT USE FOR ANY OTHER GAMEPLAY CUE, it will likely break the test.")
