--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -23,6 +23,7 @@ WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
 LogSpatialOSActorChannel=Log
 LogAudio=Warn
 LogAudioMixer=Warn
+LogSpatialTestSettings=Log
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
