--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -23,6 +23,8 @@ WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
 LogSpatialOSActorChannel=Log
 LogAudio=Warn
 LogAudioMixer=Warn
+LogMaterial=Verbose
+LogShaders=Verbose
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
