setup gym UnrealClient to have limited permissions in launch config

--- a/spatial/default_launch.json
+++ b/spatial/default_launch.json
@@ -48,7 +48,21 @@
       "worker_type": "UnrealClient",
       "permissions": [
         {
-          "all": {}
+          "entity_creation": {
+            "allow": false
+          },
+          "entity_deletion": {
+            "allow": false
+          },
+          "entity_query": {
+            "allow": true,
+            "components": [
+              "*"
+            ]
+          },
+          "system_entity_command": {
+            "allow": false
+          }
         }
       ]
     }
