setup for low fidelity scenario

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -24,7 +24,7 @@ bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
-ServicesRegion=Default
+ServicesRegion=CN
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=False
 ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
@@ -54,4 +54,5 @@ InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+bEnableMultiWorker=True
 
