--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -94,19 +94,18 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GameDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
+ServerDefaultMap=/Game/Maps/benchmarkgym_lf.benchmarkgym_lf
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
-
 
