--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -5,4 +5,9 @@ LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),Chu
 StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
 bDeleteDynamicEntities=True
 AutoStopLocalDeployment=OnEndPIE
+bSpatialDebuggerEditorEnabled=False
+bGenerateDefaultLaunchConfig=True
+bUseGDKPinnedInspectorVersion=True
+InspectorVersionOverride=1.0
+CookAndGenerateAdditionalArguments=-cookall -unversioned -DeletingExistingGeneratedSchhema
 
