Add Mock Resource Node Blueprints
Added a mock base resource Node and mock ore node blueprint.

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{4923688C-4415-A3D8-2EB1-88BF4BC444C9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -30,6 +30,10 @@
 		{
 			"Name": "SteamVR",
 			"Enabled": false
+		},
+		{
+			"Name": "SpatialGDK",
+			"Enabled": true
 		}
 	]
 }
