--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -110,5 +110,5 @@ ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
-
++GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameMode/UptimeGymGameMode.UptimeGymGameMode_C)
 
