--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -109,4 +109,5 @@ GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
-+GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameMode/UptimeGymGameMode.UptimeGymGameMode_C)
++GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
++GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameModes/UptimeGymGameMode.UptimeGymGameMode_C)
