Revert "fix clusters"
This reverts commit c6f37710f24ce681464967263dfec60c7c9bdc30.

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -24,7 +24,7 @@ bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
-ServicesRegion=CN
+ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=False
 ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
