Trigger the new CI pipeline without branch detection

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -53,4 +53,5 @@ InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+LocalWorkerLogLevel=VeryVerbose
 
