--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -42,7 +42,7 @@ steps:
         GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
         ENGINE_BRANCH: "4.26-SpatialOSUnrealGDK"
         ENGINE_MAJOR: "4.26"
-        TEST_GYMS_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
@@ -59,7 +59,7 @@ steps:
         GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
         ENGINE_BRANCH: "4.25-SpatialOSUnrealGDK"
         ENGINE_MAJOR: "4.25"
-        TEST_GYMS_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
