add new map benchmarkgymlf

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -96,18 +96,19 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GameDefaultMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
+ServerDefaultMap=/Game/Maps/benchmarkgymlf.benchmarkgymlf
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 +GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameModes/UptimeGymGameMode.UptimeGymGameMode_C)
+
