--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{CD7307C5-4267-78C9-9297-20B639767CD9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
