--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -1,4 +1,5 @@
 ---
+ci_version: &ci_version "1.0"
 # This is designed to trap and retry failures because agent lost
 # connection. Agent exits with -1 in this case.
 agent_transients: &agent_transients
@@ -36,7 +37,8 @@ steps:
   - trigger: "unrealgdkbuild-ci"
     label: "testgyms-ci-426 ${BUILDKITE_MESSAGE}"
     async: true
-    build: 
+    build:
+      branch: *ci_version
       env: 
         BUILD_TYPE: "GDK"
         GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
@@ -54,6 +56,7 @@ steps:
     label: "testgyms-ci-425 ${BUILDKITE_MESSAGE}"
     async: true
     build: 
+      branch: *ci_version
       env: 
         BUILD_TYPE: "GDK"
         GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
