Use the CustomPersistence component to detect snapshot reload vs server migration

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{C3835F5F-4207-F099-B21A-B98D0A2EDEF9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
