--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -33,7 +33,7 @@ steps:
       message: "testgyms-4.26 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "0.13.0-rc" # NOTE: temp fix for new ci release interop issues
+        GDK_BRANCH: "${GDK_BRANCH:-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
         ENGINE_BRANCH: "4.26-SpatialOSUnrealGDK-0.13.0-rc" # NOTE: temp fix for new ci release interop issues
         ENGINE_MAJOR: "4.26"
         PROJECT_BRANCH: "0.13.0-rc" # NOTE: temp fix for new ci release interop issues
