--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -53,7 +53,7 @@ steps:
       env: 
         BUILD_TYPE: "GDK"
         GDK_BRANCH: "${GDK_BRANCH:-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
-        ENGINE_BRANCH: "4.25-SpatialOSUnrealGDK-0.13.0-rc" # NOTE: temp fix for new ci release interop issues
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-4.25-SpatialOSUnrealGDK-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
         ENGINE_MAJOR: "4.25"
         PROJECT_BRANCH: "0.13.0-rc" # NOTE: temp fix for new ci release interop issues
         USE_FASTBUILD: "True"
