--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -33,8 +33,8 @@ steps:
       message: "testgyms-4.26 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.26-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-4.26-SpatialOSUnrealGDK-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
         ENGINE_MAJOR: "4.26"
         PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
@@ -52,10 +52,10 @@ steps:
       message: "testgyms-4.25 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.25-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-4.25-SpatialOSUnrealGDK-0.13.0-rc}" # NOTE: temp fix for new ci release interop issues
         ENGINE_MAJOR: "4.25"
-        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "${BUILDKITE_BRANCH}" # NOTE: temp fix for new ci release interop issues
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
