--- a/Game/Config/MapSettingsOverrides/TestOverridesSpatialSnapshotTestPart2Map.ini
+++ b/Game/Config/MapSettingsOverrides/TestOverridesSpatialSnapshotTestPart2Map.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
+PlayNumberOfClients=1
 PlayNetMode=PIE_Client
 
 [/Script/EngineSettings.GeneralProjectSettings]
