--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -1,5 +1,5 @@
 ---
-ci_version: &ci_version "1.1"
+ci_version: &ci_version "${CI_VERSION:-1.1}"
 
 # This is designed to trap and retry failures because agent lost
 # connection. Agent exits with -1 in this case.
@@ -33,10 +33,10 @@ steps:
       message: "testgyms-4.26 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.26-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-match_branch_name_pref::master}" # TODO: Do we want auto-branch name detection?
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-match_branch_name_pref_engine::4.26-SpatialOSUnrealGDK}"
         ENGINE_MAJOR: "4.26"
-        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "main_branch::${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
@@ -52,10 +52,10 @@ steps:
       message: "testgyms-4.25 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.25-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-match_branch_name_pref::master}" # TODO: Do we want auto-branch name detection?
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-match_branch_name_pref_engine::4.25-SpatialOSUnrealGDK}"
         ENGINE_MAJOR: "4.25"
-        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "main_branch::${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
