--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -33,8 +33,8 @@ steps:
       message: "testgyms-4.26 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.26-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-master}"
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-4.26-SpatialOSUnrealGDK}"
         ENGINE_MAJOR: "4.26"
         PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
@@ -52,8 +52,8 @@ steps:
       message: "testgyms-4.25 ${BUILDKITE_MESSAGE}"
       env: 
         BUILD_TYPE: "GDK"
-        GDK_BRANCH: "master" # TODO: Do we want auto-branch name detection?
-        ENGINE_BRANCH: "4.25-SpatialOSUnrealGDK"
+        GDK_BRANCH: "${GDK_BRANCH:-master}"
+        ENGINE_BRANCH: "${ENGINE_BRANCH:-4.25-SpatialOSUnrealGDK}"
         ENGINE_MAJOR: "4.25"
         PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
