--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -36,7 +36,7 @@ steps:
         GDK_BRANCH: "${GDK_BRANCH:-match_branch_name_pref::0.13.1-rc}"
         ENGINE_BRANCH: "${ENGINE_BRANCH_426:-match_branch_name_pref_engine::4.26-SpatialOSUnrealGDK-0.13.1-rc}"
         ENGINE_MAJOR: "4.26"
-        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "main_branch::${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
@@ -55,7 +55,7 @@ steps:
         GDK_BRANCH: "${GDK_BRANCH:-match_branch_name_pref::0.13.1-rc}"
         ENGINE_BRANCH: "${ENGINE_BRANCH_425:-match_branch_name_pref_engine::4.25-SpatialOSUnrealGDK-0.13.1-rc}"
         ENGINE_MAJOR: "4.25"
-        PROJECT_BRANCH: "${BUILDKITE_BRANCH}"
+        PROJECT_BRANCH: "main_branch::${BUILDKITE_BRANCH}"
         USE_FASTBUILD: "True"
         IS_BUILDKITE_BUILD: "True"
         BUILD_ANDROID: "False"
