Pull change only

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -53,4 +53,5 @@ InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=7.500000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+EventTracingSamplingSettingsClass=BlueprintGeneratedClass'/Game/EventTracing/BP_ETSamplingSettings_Default.BP_ETSamplingSettings_Default_C'
 
