--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -36,7 +36,7 @@ DefaultGraphicsPerformance=Maximum
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
-;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 NetServerMaxTickRate=30
 
 [/Script/Engine.PhysicsSettings]
@@ -96,7 +96,7 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/ClientEntityInterestGym.ClientEntityInterestGym
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -111,3 +111,4 @@ GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 +GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameModes/UptimeGymGameMode.UptimeGymGameMode_C)
+
