--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -54,4 +54,10 @@ bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
 EventTracingSamplingSettingsClass=BlueprintGeneratedClass'/Game/EventTracing/BP_ETSamplingSettings_Default.BP_ETSamplingSettings_Default_C'
+bEnableMultiWorker=True
+PositionUpdateLowerThresholdSeconds=0.100000
+PositionUpdateLowerThresholdCentimeters=5.000000
+bUseEntityIdListClientQueries=True
+bSetUseNarrowPhaseNCDInterestCulling=True
+ClientEntityIdListQueryUpdateFrequency=3.000000
 
