--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,8 +1,11 @@
 
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
+LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",RuntimeFlags=(),ServerWorkerConfiguration=(WorkerTypeName="UnrealWorker",Flags=(),WorkerPermissions=(bAllowEntityCreation=True,bAllowEntityDeletion=True,bDisconnectWorker=True,bReserveEntityID=True,bAllowEntityQuery=True),bAutoNumEditorInstances=True,NumEditorInstances=0,bManualWorkerConnectionOnly=False),AdditionalWorkerConfigs=,World=(Dimensions=(X=10000,Y=10000)),MaxConcurrentWorkers=1000)
 StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
 bDeleteDynamicEntities=True
-AutoStopLocalDeployment=OnEndPIE
+AutoStopLocalDeployment=OnExitEditor
+bSpatialDebuggerEditorEnabled=False
+bAutoStartLocalDeployment=True
+bShutdownRuntimeGracefullyOnPIEExit=False
 
