Added dirty interest flags across nodes and connections, things actually work poggers?

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -59,5 +59,7 @@ PositionUpdateLowerThresholdSeconds=0.100000
 PositionUpdateLowerThresholdCentimeters=5.000000
 bUseEntityIdListClientQueries=True
 bSetUseNarrowPhaseNCDInterestCulling=True
-ClientEntityIdListQueryUpdateFrequency=3.000000
+ClientEntityIdListQueryUpdateFrequency=2.000000
+bUseClientEntityInterestQueries=True
+bUseNarrowPhaseNCDInterestCulling=True
 
