--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ Game/Content/Spatial/SchemaDatabase.uasset
 # Rider
 .idea/
 Game/Plugins/Developer/RiderLink
+
+
+spatial/workers/unreal/spatialos.RoutingWorker.worker.json
+spatial/workers/unreal/spatialos.StrategyWorker.worker.json
