--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -96,7 +96,7 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ClientEntityInterestGym.ClientEntityInterestGym
+EditorStartupMap=/Game/Maps/benchmarkgym.benchmarkgym
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
