--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,11 +1,55 @@
 
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",RuntimeFlags=(),ServerWorkerConfiguration=(WorkerTypeName="UnrealWorker",Flags=(),WorkerPermissions=(bAllowEntityCreation=True,bAllowEntityDeletion=True,bDisconnectWorker=True,bReserveEntityID=True,bAllowEntityQuery=True),bAutoNumEditorInstances=True,NumEditorInstances=0,bManualWorkerConnectionOnly=False),AdditionalWorkerConfigs=,World=(Dimensions=(X=10000,Y=10000)),MaxConcurrentWorkers=1000)
-StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
-bDeleteDynamicEntities=True
-AutoStopLocalDeployment=OnExitEditor
-bSpatialDebuggerEditorEnabled=False
-bAutoStartLocalDeployment=True
+bGenerateDefaultLaunchConfig=True
+StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=False,bUseGDKPinnedRuntimeVersionForCloud=False,LocalRuntimeVersion="15.0.3",CloudRuntimeVersion="15.0.3")
 bShutdownRuntimeGracefullyOnPIEExit=False
+bUseGDKPinnedInspectorVersion=True
+InspectorVersionOverride=
+SpatialOSLaunchConfig=(FilePath="")
+ExposedRuntimeIP=
+bAutoStartLocalDeployment=True
+bSpatialDebuggerEditorEnabled=False
+AutoStopLocalDeployment=OnExitEditor
+bDeleteDynamicEntities=True
+bStopPIEOnTestingCompleted=True
+SpatialOSSnapshotToSave=default.snapshot
+SpatialOSSnapshotToLoad=default.snapshot
+CookAndGeneratePlatform=
+CookAndGenerateAdditionalArguments=-cookall -unversioned
+AssemblyName=
+PrimaryDeploymentName=
+PrimaryLaunchConfigPath=(FilePath="")
+SnapshotPath=(FilePath="C:/Unreal/TestGyms/spatial/snapshots/default.snapshot")
+PrimaryDeploymentRegionCode=US
+MainDeploymentCluster=
+DeploymentTags=
+bIsAutoGenerateCloudConfigEnabled=True
+bBuildAndUploadAssembly=True
+AssemblyBuildConfiguration=Development
+bForceAssemblyOverwrite=False
+bBuildClientWorker=False
+bGenerateSchema=False
+bGenerateSnapshot=False
+BuildServerExtraArgs=
+BuildClientExtraArgs=
+BuildSimulatedPlayerExtraArgs=
+DevelopmentAuthenticationToken=
+bConnectServerToCloud=False
+LocalReceptionistPort=7777
+ListeningAddress=127.0.0.1
+SimulatedPlayerDeploymentRegionCode=US
+SimulatedPlayerCluster=
+bSimulatedPlayersIsEnabled=False
+SimulatedPlayerDeploymentName=
+NumberOfSimulatedPlayers=0
+bMobileOverrideConnectionFlow=False
+MobileConnectionFlow=LocalDeployment
+MobileRuntimeIPOverride=
+MobileWorkerType=UnrealClient
+MobileExtraCommandLineArgs=
+bPackageMobileCommandLineArgs=True
+bStartPIEClientsWithLocalLaunchOnDevice=False
+LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",RuntimeFlags=(),ServerWorkerConfiguration=(WorkerTypeName="UnrealWorker",Flags=(("total_players", "40"),("player_density", "8")),WorkerPermissions=(bAllowEntityCreation=True,bAllowEntityDeletion=True,bDisconnectWorker=True,bReserveEntityID=True,bAllowEntityQuery=True),bAutoNumEditorInstances=True,NumEditorInstances=0,bManualWorkerConnectionOnly=False),AdditionalWorkerConfigs=,World=(Dimensions=(X=10000,Y=10000)),MaxConcurrentWorkers=1000)
+SpatialOSNetFlowType=LocalDeployment
 
