add metrics plugin

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -111,3 +111,12 @@ GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 +GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameModes/UptimeGymGameMode.UptimeGymGameMode_C)
+
+[Analytics]
+ProviderModuleName=MetricsServiceProvider
+ApiSecret=None
+BatchSize=1
+MaxAge=300
+
+[HTTPServer.Listeners]
+DefaultBindAddress=any
