diable gc cluster.

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -111,3 +111,9 @@ GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 +GameModeClassAliases=(Name="UptimeTest",GameMode=/Game/GameModes/UptimeGymGameMode.UptimeGymGameMode_C)
+
+[/Script/Engine.GarbageCollectionSettings]
+gc.CreateGCClusters=False
+gc.AssetClustreringEnabled=False
+gc.MultithreadedDestructionEnabled=False
+
