Adding new setting that will be tested via EventTracingSettingsOverride.cpp

--- a/Game/Config/MapSettingsOverrides/TestOverridesSpatialEventTracingGroup.ini
+++ b/Game/Config/MapSettingsOverrides/TestOverridesSpatialEventTracingGroup.ini
@@ -1,5 +1,8 @@
 [/Script/SpatialGDK.SpatialGDKSettings]
 bEventTracingEnabled=True
 
+[/Script/SpatialGDK.SpatialGDKSettings]
+bEventTracingEnabledWithEditor=True
+
 [/Script/UnrealEd.LevelEditorPlaySettings]
 PlayNumberOfClients=1
