--- a/Game/Config/NFROverrides/DefaultEngine.diff.ini
+++ b/Game/Config/NFROverrides/DefaultEngine.diff.ini
@@ -8,8 +8,8 @@ ConfiguredLanSpeed=1000000
 ConfiguredInternetSpeed=1000000
 
 [Core.Log]
-LogNetPlayerMovement=Log
-LogActorSystem=Log
-LogSpatialSender=Log
-LogGridBasedLBStrategy=Log
-LogLayeredLBStrategy=Log
+LogNetPlayerMovement=Error
+LogActorSystem=Warning
+LogSpatialSender=Warning
+LogGridBasedLBStrategy=Warning
+LogLayeredLBStrategy=Warning
