Increase client downstream window size

--- a/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
+++ b/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
@@ -9,3 +9,4 @@ PositionUpdateThresholdMaxSeconds=300.0
 bUseClientEntityInterestQueries=True
 ClientEntityIdListQueryUpdateFrequency=0.100000
 bUseNarrowPhaseNCDInterestCulling=True
+ClientDownstreamWindowSizeBytes=2097152
