--- a/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
+++ b/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
@@ -13,3 +13,5 @@ ClientDownstreamWindowSizeBytes=4194304
 ClientUpstreamWindowSizeBytes=4194304
 ServerDownstreamWindowSizeBytes=4194304
 ServerUpstreamWindowSizeBytes=4194304
+bUserSpaceServerInterest=True
+bRunStrategyWorker=True
