Reduce server rpc frequency and load

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -30,3 +30,5 @@ MaxSpectators=1000
 ClientNetSendMoveDeltaTime=0.0333
 ClientNetSendMoveDeltaTimeThrottled=0.0333
 ClientNetSendMoveDeltaTimeStationary=0.0333
+ClientNetCamUpdateDeltaTime=0.0333
+
